tinyc/test/bad/true-redeclare-variable.c
int main()
{
    int true = 3;
    return 0;
}
